# esphal-uart-dma

./: .gitmodules  Cargo.toml
esp-hal-backup/: mod.rs
old_idf_src/: main.rs
old_idf_src/idf/dma/: mod.rs
old_idf_src/idf/hal/: mod.rs  uhci_hal.rs  uhci_ll.rs
src/: main.rs  uhci.rs
src/idf/: mod.rs  uhci.rs
src/idf/dma/: gdma.rs
src/idf/hal/: gdma_hal_ahb_v1.rs  mod.rs  uhci_ll.rs
